--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
+    "uuid": "^10.0.0"
   }
 }
